@@ -225,7 +225,7 @@
 ## No tests possible since a++-- is not valid
 ## Level 11 (transpose and exponentiation)
 %!test
-%! assert (2^3**2, 64);
+%! assert (2^3^2, 64);
 %! assert ([2 3].^2.', [4;9]);
 %! assert ([2 3].'.^2, [4;9]);
 %! assert (3*4i'.', 0 - 12i);
