@@ -254,7 +254,7 @@ to true.
 * `ytickangle`
 * `ztickangle`
 
-### Deprecated functions and properties
+### Deprecated functions, properties, and operators
 
 The following functions and properties have been deprecated in Octave 7
 and will be removed from Octave 9 (or whatever version is the second
@@ -273,6 +273,12 @@ major release after 7):
   Object           | Property      | Value
   -----------------|---------------|------------
                    |               |
+- Operators
+
+  Operator | Replacement | Description
+  ---------|-------------|------------
+  **       | ^           | Matrix exponent
+  .**      | .^          | Element-by-element exponent
 
 - Interpreter
 
